# RuleFlow

./: .env.example  .gitignore  Architecture.md  Problem Statement.md  README.md  render.yaml  start.bat
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  security.py
backend/app/agents/: __init__.py  extraction.py  graph.py  inspector.py  prompts.py  reasoning.py  scoring.py
backend/app/api/: audit.py  auth.py  changes.py  compliance.py  dashboard.py  datasource.py  deps.py  documents.py  firms.py  inspector.py  obligations.py
backend/app/db/: __init__.py  base.py  init_db.py  models.py
backend/app/ingest/: __init__.py  parser.py  structure.py
backend/app/kernel/: __init__.py  citation.py  coverage.py  diff.py  gaps.py  hashing.py  obligation_tests.py
backend/app/llm/: __init__.py  client.py
backend/app/schemas/: __init__.py  models.py
backend/app/services/: __init__.py  audit.py  change_service.py  compliance_service.py  datasource_service.py  ingest_service.py  inspector_service.py  progress.py
backend/scripts/: reset_db.py
backend/tests/: conftest.py  test_auth_and_datasource.py  test_kernel_citation.py  test_kernel_coverage.py  test_kernel_diff.py  test_kernel_tests_and_gaps.py  test_services_integration.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentFlow.tsx  AppLayout.tsx  Aurora.tsx  RequireDataSource.tsx  motion.tsx  ui.tsx
frontend/src/lib/: api.ts  auth.tsx  firm.tsx  util.ts
(+12 files in other folders)
