[project]
name = "ruleflow-backend"
version = "0.1.0"
description = "RuleFlow — Agentic Compliance Platform backend (SEBI TechSprint 2026, Theme 2)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "structlog>=24.1",
    "litellm>=1.44",
    "pymupdf>=1.24",
    "numpy>=1.26",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# Heavy / optional runtime deps kept separate so core + tests install fast.
agents = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
workflows = [
    "temporalio>=1.6",
]
ocr = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
]
vector = [
    "pgvector>=0.3",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"
